# rp-rust-switch-joystick

./: Cargo.toml  README.md  build.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  probe-rs-debugger-0.4.0.vsix
rp2040/: Cargo.toml  build.sh  init.sh  rp-rust-switch-joystick.uf2
rp2040/src/: uart.rs
rp2040/src/hid/: mod.rs
rp2040/src/hid/pro_controller/: descriptor.rs
rp235x/: .gitignore  Cargo.toml  build.rs  build.sh
rp235x/.cargo/: config.toml
rp235x/src/: main.rs  uart.rs
rp235x/src/hid/pro_controller/: input.rs  mod.rs  pro_controller.rs
src/: main.rs  uart.rs
src/hid/pro_controller/: input.rs  mod.rs  pro_controller.rs  response.rs
src/macro/: mod.rs
src/macro/scripts/: mod.rs  script_pokemon_sv.rs  struct.rs
src/macro/scripts/common/: common.rs  mod.rs
src/macro/scripts/pokemon/: mod.rs
src/macro/scripts/pokemon/sv/: common.rs  mod.rs
