[package]
edition = "2021"
name = "rp235x-project-template"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
# cortex-m-rtic = "1.1.4"
embedded-hal = "1.0.0"
# embedded-hal-async = "1.0.0"
critical-section = {version = "1.2.0"}
libm = "0.2.11"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
rp235x-hal = { version = "0.2.0", features = ["binary-info", "critical-section-impl", "rt", "defmt"] }
panic-halt = "1.0.0"
usb-device = "0.3.2"
usbd-hid = "0.8.2"
heapless = "0.8.0"
fixed-queue = "0.5.1"
fugit = "0.3.7"

# embedded-alloc = "0.6.0"
# embedded-io = "0.6.1"
# critical-section = {version = "1.2.0"}
# dht-sensor = "0.2.1"
# embedded_hal_0_2 = {package = "embedded-hal", version = "0.2.5", features = ["unproven"]}
# futures = {version = "0.3.30", default-features = false, features = ["async-await"]}
# hd44780-driver = "0.4.0"
# nb = "1.1.0"
# pio = "0.2.1"
# pio-proc = "0.2.2"
# usbd-serial = "0.2.2"
# static_cell = "2.1.0"

# [target.'cfg( target_arch = "arm" )'.dependencies]
# embassy-executor = {version = "0.6.3", features = ["arch-cortex-m", "executor-thread"]}

# [target.'cfg( target_arch = "riscv32" )'.dependencies]
# embassy-executor = {version = "0.6.3", features = ["arch-riscv32", "executor-thread"]}
